# library-api

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0259971e226b_add_b00ks_table.py  b83d218911cf_create_books_table.py
app/: main.py
app/api/: deps.py
app/api/routers/: books.py
app/common/: error_handlers.py  exceptions.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: book.py
app/repositories/: books.py
app/schemas/: __init__.py  books.py  errors.py
app/services/: books.py
docker/: entrypoint.sh
docs/: api.http
tests/: conftest.py  test_api_books.py  test_schemas_books.py  test_schemas_errors.py  test_services_books.py
