[tool.poetry]
name = "library-api"
version = "0.1.0"
description = "Simple library API"
authors = ["Dawid Stajszczyk <dawid.stajszczyk@bcf-software.com>"]
readme = "README.md"
packages = [{ include = "app" }]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
sqlalchemy = ">=2.0,<3.0"
alembic = ">=1.16.4,<2.0.0"
psycopg = { version = ">=3.2.9,<4.0.0", extras = ["binary"] }
pydantic = ">=2.11.7,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"
anyio = "^4.10.0"
ruff = "^0.12.10"
mypy = "^1.17.1"
sqlalchemy2-stubs = "^0.0.2a38"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=85"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
